Fixed alignment of category buttons for quiz

--- a/portfolio3/src/components/QuizLanding/index.css
+++ b/portfolio3/src/components/QuizLanding/index.css
@@ -16,6 +16,7 @@ hr {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     min-height: 80vh;
     text-align: center;
 }
